Fix scrollbar visual glitch on Firefox
`-moz-scrollbars-none` is obsolete and causing visual glitch on Firefox
https://developer.mozilla.org/en-US/docs/Web/CSS/overflow#Mozilla_Extensions

--- a/source/assets/stylesheets/components/_docs-nav.scss
+++ b/source/assets/stylesheets/components/_docs-nav.scss
@@ -11,7 +11,7 @@
       position: fixed;
       top: 0;
       max-height: 100vh;
-      overflow: -moz-scrollbars-none;
+      overflow: hidden;
       overflow-y: scroll;
       overflow-x: visible;
 
